--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 <style>
   .common_font{font-family: "Manrope", sans-serif;}
+  .img_content{
+    margin-top: 40px;
+  }
 </style>
 <!-- For fonwAwesome icon cdn -->
 <script src="https://kit.fontawesome.com/d9b33aba60.js" crossorigin="anonymous"></script>
@@ -31,11 +34,11 @@
 
 </head>
 <body class="common_font">
-    <main class="max-w-screen-xl mx-auto px-16 lg:px-28 border">
-      <header class="flex pt-10 mb-20">
+    <main class="max-w-screen-xl mx-auto px-16 lg:px-28">
+      <header class="lg:flex pt-10 mb-20">
         <!-- text content -->
         <div>
-          <h1 class="text-5xl md:text-7xl">It's good<br>
+          <h1 class="text-5xl md:text-7xl font-bold lg:leading-tight">It's good<br>
             tea time at The<br>
             Tea House</h1>
             <br>
@@ -44,7 +47,7 @@
           <button class="bg-gradient-to-r from-orange-500 to-red-500 px-5 py-3 rounded-lg text-white font-bold">Explore More <i class="fa-solid fa-arrow-right text-xl -rotate-45"></i></button>
         </div>
         <!-- image content -->
-        <div class="relative">
+        <div class="relative img_content">
           <div>
             <img class="width-full" src="./images/banner.png" alt="Banner Image" />
           </div>
@@ -60,6 +63,48 @@
            </div>
         </div>
       </header>
+
+      <!-- Featured section -->
+       <section class="py-6 lg:py-24">
+        <div class="feature">
+          <div class="w-3/4 mx-auto text-center">
+            <h1 class="text-3xl font-extrabold">Our Featured Products</h1>
+            <p class="text-gray-500 mt-3">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
+          </div>
+
+
+          <div class="grid grid-cols-4 md:grid-cols-2 lg:grid-cols-4 gap-6 text-center mt-20">
+            <div class="bg-gray-100 py-6 rounded-lg">
+              <img class="mx-auto" src="./images/tea-1.png" alt="Tea One" />
+              <div class="mt-5">
+                <h2 class="font-extrabold text-lg">Milk Tea</h2>
+                <p class="mt-2 text-sm w-2/3 mx-auto text-gray-500">Creamer could be replaced by fresh milk</p>
+              </div>
+            </div>
+            <div class="bg-gray-100 py-6 rounded-lg">
+              <img class="mx-auto" src="./images/tea-2.png" alt="Tea One" />
+              <div class="mt-5">
+                <h2 class="font-extrabold text-lg">Milk Tea</h2>
+                <p class="mt-2 text-sm w-2/3 mx-auto text-gray-500">Creamer could be replaced by fresh milk</p>
+              </div>
+            </div>
+            <div class="bg-gray-100 py-6 rounded-lg">
+              <img class="mx-auto" src="./images/tea-3.png" alt="Tea One" />
+              <div class="mt-5">
+                <h2 class="font-extrabold text-lg">Milk Tea</h2>
+                <p class="mt-2 text-sm w-2/3 mx-auto text-gray-500">Creamer could be replaced by fresh milk</p>
+              </div>
+            </div>
+            <div class="bg-gray-100 py-6 rounded-lg">
+              <img class="mx-auto" src="./images/tea-4.png" alt="Tea One" />
+              <div class="mt-5">
+                <h2 class="font-extrabold text-lg">Milk Tea</h2>
+                <p class="mt-2 text-sm w-2/3 mx-auto text-gray-500">Creamer could be replaced by fresh milk</p>
+              </div>
+            </div>
+          </div>
+        </div>
+       </section>
     </main>
 </body>
 </html>
