--- a/index.html
+++ b/index.html
@@ -105,6 +105,37 @@
           </div>
         </div>
        </section>
+
+       <!-- Great Tea sections -->
+        <section class="mb-24">
+          <div class="grid grid-cols-1 lg:grid-cols-2">
+            <!-- Image sections -->
+             <div class="grid grid-cols-2 grid-rows-3 gap-4 lg:w-5/6">
+              <div class="h-38 bg-gradient-to-r from-red-100 to-red-50 rounded-xl"></div>
+              <div class="bg-orange-50 row-span-2">
+                <img class="mx-auto my-5 rounded-xl" src="./images/fresh-1.png" alt="Fressh Tea" />
+              </div>
+
+              <div class="bg-stone-100 row-span-2">
+                <img class="mx-auto my-5 rounded-xl" src="./images/fresh-2.png" alt="Fressh Tea" />
+              </div>
+              <div class="h-38 bg-gradient-to-r from-stone-100 to-stone-200 rounded-xl"></div>
+
+             </div>
+
+             <!-- Text sections -->
+             <div>
+              <h1 class="text-5xl font-bold mb-5">Great Tea, Freshly Presented</h1>
+              <p class="text-gray-500">The meaning of gong cha is chanese is to provide the best tea to emperor from all possessions . It represents the highest quality and self expectation. Establishing in 2006, Gong cha had been deeply appreciated by its custoers  because of good words of mouth and unique customized service orginated from Taiwan.</p>
+              <br>
+              <h1 class="text-xl font-bold">Unique Taste</h1>
+              <p class="text-gray-500 mb-5">A Unique and different style from other teapots gives a luxurious and minimalist impression</p>
+              <h1 class="text-xl font-bold">Premium Quality</h1>
+              <p class="text-gray-500 mb-5">Premium Quality that makes tea more elegant and more durable when you use it.</p>
+             </div>
+          </div>
+        </section>
+
     </main>
 </body>
 </html>
